# devflow

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
docs/: architecture.md
docs/adr/: 001-n8n-como-orquestador.md  002-action-dispatcher-pattern.md  003-ruff-como-linter-formatter.md  004-gh-cli-sobre-api-rest.md  005-github-rest-api-en-docker.md
fastapi/: CLAUDE.md  Dockerfile  requirements.txt
fastapi/app/: main.py
fastapi/app/routers/: automations.py
fastapi/app/services/: github_standup.py  invoices.py  processor.py
fastapi/tests/: test_automations.py  test_invoices.py  test_processor.py
n8n/backup/: daily_standup_workflow.json  generate_invoice_workflow.json
standup/: .env.example  CLAUDE.md  daily_standup.py
standup/tests/: conftest.py  test_date_range.py  test_destinations.py  test_format.py  test_github_data.py  test_llm.py
