[project]
name = "automations"
version = "0.1.0"
description = "Sistema de automaciones con FastAPI, n8n y scripts de productividad"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["fastapi/app", "standup"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = false
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["fastapi/tests", "standup/tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
pythonpath = ["fastapi", "standup"]
